service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allocator-webhook-service
spec:
  ports:
    - port: 443
      targetPort: 9443
