manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-clusterip
  failurePolicy: Ignore
  name: mutate-clusterip.webhook.svc
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: webhook
  name: system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: system
  labels:
    control-plane: webhook
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  selector:
    matchLabels:
      control-plane: webhook
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: webhook
    spec:
      containers:
        - command:
          - /webhook
          # uncomment the following section to update the respective parameters.
          #args:
          #- --ip-range=10.96.0.0/12
          #- --webhook-port=9443
          #- --metrics-addr=0.0.0.0:8443
          image: allocator:v1
          name: webhook
          ports:
          - containerPort: 9443
            name: webhook-server
            protocol: TCP
          #- containerPort: 8443
          #  name: webhook-metrics
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: webhook
